<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    tools:context=".DetailResep">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/nama_resep"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_set_name"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/img_set_name"
                tools:src="@tools:sample/avatars"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:src="@android:color/darker_gray"/>
        </LinearLayout>
        <TextView
            android:text="@string/bahan"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="11dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="18dp">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/tv_set_bahan"
                    android:text="@string/bahan"
                    android:textColor="@android:color/black"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <TextView
            android:text="@string/pembuatan"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="11dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="18dp">
            <TextView
                android:text="@string/pembuatan"
                android:textColor="@android:color/black"
                android:justificationMode="inter_word"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_set_cara"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>